fix: Adjust text alignment for restaurants list

--- a/css/styles.css
+++ b/css/styles.css
@@ -318,6 +318,7 @@ nav {
 	letter-spacing: 0;
 	line-height: 1.3;
 	margin: 20px 0 10px;
+	text-align: left;
 	text-transform: uppercase;
 }
 
